--- a/ProcessKiller.UI/ProcessKiller.UI.csproj
+++ b/ProcessKiller.UI/ProcessKiller.UI.csproj
@@ -64,7 +64,9 @@
     <Compile Include="Logic\FileReader.cs" />
     <Compile Include="Logic\ProcessKiller.cs" />
     <Compile Include="Logic\ProcessManager.cs" />
+    <Compile Include="Model\KillModel.cs" />
     <Compile Include="Model\ProcessModel.cs" />
+    <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
